--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,11 @@
         "laravel/jetstream": "^1.4",
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.0",
-        "tightenco/ziggy": "^0.9.4"
+        "tightenco/ziggy": "^0.9.4",
+        "infyomlabs/laravel-generator": "8.0.x-dev",
+        "laravelcollective/html": "^6.2",
+        "infyomlabs/coreui-templates": "8.0.x-dev",
+        "doctrine/dbal": "~2.3"
     },
     "require-dev": {
         "facade/ignition": "^2.3.6",
