--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
         "lodash": "^4.17.19",
         "portal-vue": "^2.1.7",
         "postcss-import": "^12.0.1",
-        "resolve-url-loader": "^3.1.0",
+        "resolve-url-loader": "^3.1.2",
         "tailwindcss": "^1.3.0",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "@inertiajs/progress": "^0.2.2",
         "vuedraggable": "^2.24.3"
     }
 }
